# comp511_valueflow

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_CONTEXT.md  CHANGES_updated_ss.md  CLAUDE.md  CONTRIBUTING.md  README.md  calculate_metrics.py  closing_the_eval_gap.md  pyproject.toml  rebuild_analysis.py  repomix-output.xml  run_experiment.py  setup.ps1  setup.sh
.claude/skills/codebase-architecture/: SKILL.md
.github/workflows/: ci.yml  release.yml
config/: experiment.yaml
config/environment/: game_theoretic.yaml  generic_world.yaml  social_media.yaml  valueflow.yaml
config/evaluation/: basic_metrics.yaml  valueflow.yaml  valueflow_judged.yaml  valueflow_schwartz21.yaml
config/model/: claude.yaml  gpt4.yaml  gpt4o.yaml  mock.yaml  multi_model.yaml
config/scenario/: ai_conference.yaml  debate.yaml  election.yaml  marketplace.yaml  misinformation.yaml  valueflow.yaml  valueflow_15_agents.yaml  valueflow_5_agents.yaml
config/simulation/: parallel.yaml  sequential.yaml
experiments/: study_schema.md
experiments/style_diversity/: study.yaml
experiments/valueflow/: study.yaml
notebooks/: study_style_diversity.ipynb  study_valueflow.ipynb
scenarios/ai_conference/: README.md  __init__.py  agents.py  game_masters.py
scenarios/election/: __init__.py  agents.py  conftest.py  evaluation.yaml  events.py  game_masters.py  knowledge.py
scenarios/election/data/: knowledge.yaml
scenarios/marketplace/: __init__.py  agents.py  conftest.py  evaluation.yaml  events.py  game_masters.py  knowledge.py
scenarios/marketplace/data/: knowledge.yaml
scenarios/misinformation/: __init__.py  agents.py  game_masters.py
scenarios/valueflow/: README.md  __init__.py  agents.py  drift_graph.py  engine.py  game_masters.py  metrics.py  metrics_old.py  metrics_wrong_ss.py  plotting.py  simulator.py  simulator_old.py  topology_metrics.py
scenarios/valueflow/data/: schwartz_values.yaml
scripts/: analyze_furthest_nodes.py  analyze_social_media.py  explore_dashboard.py  generate_topology_pngs.py  judge_probe_results.py  organize_experiments.py  run_social_media_sim.py  run_valueflow.py  run_valueflow_wrong_ss.py
src/: __init__.py
src/entities/: __init__.py
src/entities/agents/: __init__.py  basic_entity.py  planning_agent.py
src/entities/components/: __init__.py  base.py
src/entities/game_masters/: __init__.py  basic_gm.py
src/environments/social_media/: __init__.py  analysis.py  app.py  components.py  concordia_gm.py  engine.py  game_master.py
src/evaluation/: __init__.py  probe_runner.py  probes.py
src/models/: __init__.py  anthropic_model.py  local_model.py  openai_model.py
src/simulation/: __init__.py  simulation.py
src/simulation/engines/: __init__.py  base.py  engine_utils.py  sequential.py
src/simulation/simulators/: __init__.py  base.py  multi_model.py
src/utils/: __init__.py  config_helpers.py  event_logger.py  html_utils.py  logging_setup.py  testing.py  validation.py
studies/: style_diversity.yaml
tests/: __init__.py  conftest.py
tests/environments/: test_social_media_analysis.py  test_social_media_app.py  test_social_media_engine.py  test_social_media_game_master.py
tests/test_agents/: __init__.py  test_basic_entity.py
tests/test_evaluation/: test_probe_runner.py  test_probes.py
tests/test_integration/: test_simulation_run.py
tests/test_scenarios/: __init__.py  test_marketplace_agents.py  test_marketplace_events.py  test_marketplace_knowledge.py
tests/test_scenarios/test_valueflow/: test_engine.py  test_judged_probe.py  test_perturbation.py  test_topology.py  test_topology_metrics.py
tests/test_simulators/: test_base_simulator.py  test_multi_model.py
tests/test_utils/: test_validation.py
